Youtube width update
Added style for youtube video to be responsive to mobile width

--- a/css/style.css
+++ b/css/style.css
@@ -702,3 +702,10 @@ textarea {
   to {
     opacity: 0;
     top: 27px; } }
+
+    /* Mobile Youtube */
+@media screen and (max-width:767px) {
+  iframe[src*="youtube"] {
+      width: 100% !important;
+  }
+  }
